<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    style="@style/Match"
    android:fitsSystemWindows="true"
    tools:context=".SampleDetailActivity2">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            style="@style/Match"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_collapsing"
                style="@style/Match"
                android:contentDescription="@string/placeholder"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_activity_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        style="@style/Match"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/Match"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <android.support.v7.widget.CardView
                style="@style/MatchWidth"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout style="@style/Widget.CardContent">

                    <TextView
                        style="@style/MatchWidth"
                        android:text="@string/placeholder_a"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                    <TextView
                        android:id="@+id/tv_activity_detail"
                        style="@style/MatchWidth"
                        android:textIsSelectable="true"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/MatchWidth"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout style="@style/Widget.CardContent">

                    <TextView
                        style="@style/MatchWidth"
                        android:text="@string/placeholder_b"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                    <TextView
                        style="@style/MatchWidth"
                        android:text="@string/lorem_ipsum"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/MatchWidth"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout style="@style/Widget.CardContent">

                    <TextView
                        style="@style/MatchWidth"
                        android:text="@string/placeholder_c"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                    <TextView
                        style="@style/MatchWidth"
                        android:text="@string/lorem_ipsum"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tv_id"
                style="@style/Wrap"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:textSize="18sp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_detail"
        style="@style/Wrap"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@mipmap/ic_launcher"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>
